# audio-synthesizer

./: CMakeLists.txt  README.md
src/: gstaudiosynth1.c  gstgzdec.c  gstgzdec.h  instrument.cpp  main.cpp  options.cpp  plugin.c  simple_client.cpp  version.cpp
src/include/: gstaudiosynth1.h  gstgzdec.h  instrument.h  options.h  stopwatch.h  version.h
